--- a/code/atari/1-breakout-dqn/test.ipynb
+++ b/code/atari/1-breakout-dqn/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fb0a7acb",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "aa0ed516",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "07113200",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e96627fa",
    "metadata": {},
    "outputs": [],
@@ -95,10 +95,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b115ceff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\edr2\\anaconda3\\envs\\game\\lib\\site-packages\\gym\\envs\\atari\\environment.py:257: UserWarning: \u001b[33mWARN: We strongly suggest supplying `render_mode` when constructing your environment, e.g., gym.make(ID, render_mode='human'). Using `render_mode` provides access to proper scaling, audio support, and proper framerates.\u001b[0m\n",
+      "  \"We strongly suggest supplying `render_mode` when \"\n",
+      "C:\\Users\\edr2\\anaconda3\\envs\\game\\lib\\site-packages\\pyglet\\image\\codecs\\wic.py:289: UserWarning: [WinError -2147417850] 스레드 모드가 설정된 후에는 바꿀 수 없습니다\n",
+      "  warnings.warn(str(err))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "episode:   0 | score : 348.0\n",
+      "episode:   1 | score : 65.0\n",
+      "episode:   2 | score : 399.0\n",
+      "episode:   3 | score : 35.0\n",
+      "episode:   4 | score : 133.0\n",
+      "episode:   5 | score : 341.0\n",
+      "episode:   6 | score : 156.0\n",
+      "episode:   7 | score : 53.0\n",
+      "episode:   8 | score : 159.0\n",
+      "episode:   9 | score : 25.0\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    # 환경 세팅\n",
@@ -181,9 +208,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "game",
    "language": "python",
-   "name": "python3"
+   "name": "myenvname"
   },
   "language_info": {
    "codemirror_mode": {
@@ -195,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.11"
   },
   "toc": {
    "base_numbering": 1,
