--- a/code/atari/2-breakout-a3c/test.ipynb
+++ b/code/atari/2-breakout-a3c/test.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e460a6ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\edr2\\anaconda3\\envs\\game\\lib\\site-packages\\ale_py\\roms\\utils.py:90: DeprecationWarning: SelectableGroups dict interface is deprecated. Use select.\n",
+      "  for external in metadata.entry_points().get(self.group, []):\n"
+     ]
+    }
+   ],
    "source": [
     "import gym\n",
     "import time\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "676ad0be",
    "metadata": {},
    "outputs": [],
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4f69be57",
    "metadata": {},
    "outputs": [],
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3d962ea3",
    "metadata": {},
    "outputs": [],
@@ -90,10 +99,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "772f4615",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\edr2\\anaconda3\\envs\\game\\lib\\site-packages\\gym\\envs\\atari\\environment.py:257: UserWarning: \u001b[33mWARN: We strongly suggest supplying `render_mode` when constructing your environment, e.g., gym.make(ID, render_mode='human'). Using `render_mode` provides access to proper scaling, audio support, and proper framerates.\u001b[0m\n",
+      "  \"We strongly suggest supplying `render_mode` when \"\n",
+      "C:\\Users\\edr2\\anaconda3\\envs\\game\\lib\\site-packages\\pyglet\\image\\codecs\\wic.py:289: UserWarning: [WinError -2147417850] 스레드 모드가 설정된 후에는 바꿀 수 없습니다\n",
+      "  warnings.warn(str(err))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "episode:   0 | score : 82.0\n",
+      "episode:   1 | score : 369.0\n",
+      "episode:   2 | score : 407.0\n",
+      "episode:   3 | score : 273.0\n",
+      "episode:   4 | score : 367.0\n",
+      "episode:   5 | score : 209.0\n",
+      "episode:   6 | score : 392.0\n",
+      "episode:   7 | score : 264.0\n",
+      "episode:   8 | score : 319.0\n",
+      "episode:   9 | score : 72.0\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    # 테스트를 위한 환경, 모델 생성\n",
@@ -172,9 +208,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "game",
    "language": "python",
-   "name": "python3"
+   "name": "myenvname"
   },
   "language_info": {
    "codemirror_mode": {
@@ -186,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.11"
   },
   "toc": {
    "base_numbering": 1,
