--- a/code/atari/1-breakout-dqn/test.ipynb
+++ b/code/atari/1-breakout-dqn/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "fb0a7acb",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "aa0ed516",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "07113200",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "e96627fa",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b115ceff",
    "metadata": {},
    "outputs": [
@@ -103,26 +103,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\edr2\\anaconda3\\envs\\game\\lib\\site-packages\\gym\\envs\\atari\\environment.py:257: UserWarning: \u001b[33mWARN: We strongly suggest supplying `render_mode` when constructing your environment, e.g., gym.make(ID, render_mode='human'). Using `render_mode` provides access to proper scaling, audio support, and proper framerates.\u001b[0m\n",
-      "  \"We strongly suggest supplying `render_mode` when \"\n",
-      "C:\\Users\\edr2\\anaconda3\\envs\\game\\lib\\site-packages\\pyglet\\image\\codecs\\wic.py:289: UserWarning: [WinError -2147417850] 스레드 모드가 설정된 후에는 바꿀 수 없습니다\n",
-      "  warnings.warn(str(err))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "episode:   0 | score : 348.0\n",
-      "episode:   1 | score : 65.0\n",
-      "episode:   2 | score : 399.0\n",
-      "episode:   3 | score : 35.0\n",
-      "episode:   4 | score : 133.0\n",
-      "episode:   5 | score : 341.0\n",
-      "episode:   6 | score : 156.0\n",
-      "episode:   7 | score : 53.0\n",
-      "episode:   8 | score : 159.0\n",
-      "episode:   9 | score : 25.0\n"
+      "C:\\Users\\samsung\\anaconda3\\lib\\site-packages\\gym\\envs\\atari\\environment.py:255: UserWarning: \u001b[33mWARN: We strongly suggest supplying `render_mode` when constructing your environment, e.g., gym.make(ID, render_mode='human'). Using `render_mode` provides access to proper scaling, audio support, and proper framerates.\u001b[0m\n",
+      "  logger.warn(\n"
      ]
     }
    ],
@@ -208,9 +190,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "game",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "myenvname"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -222,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
